fixed image links

--- a/templates/layout/about_rhiannon.pug
+++ b/templates/layout/about_rhiannon.pug
@@ -3,7 +3,7 @@ div#about_rhiannon.about.sm-card
     p
         em Owner/Creater
 
-    img(src="/static/img/rhiannon.jpg", alt="")
+    img(src="/static/img/Rhiannon.jpg", alt="")
 
     p I am the owner and creator of Cuttin Scrap, where perfection is not the answer. I live life to the fullest, and cherish every breath. 
         a(href="/about") Read More #[i.fa.fa-long-arrow-right(aria-hidden='true')]
