fixed about text

--- a/templates/pages/about/index.pug
+++ b/templates/pages/about/index.pug
@@ -28,6 +28,6 @@ block content
         p Alongside of our children we have a Terrier/Chihuahua.  He is my buddy.  His name is Gizmo.  Gizmo loves sleeping under the covers.  He rarely barks and does not enjoy walks or playing with toys.  He does like his belly rubs from me.  Gizmo was a rescue.  He was rescued from a single wide trailer with 60 other dogs.  He was the only male left with a tale.  Gizmo has quite a bit of anxiety, but is overall a pretty loving little guy, as long as you have a blanket.
 
         img.profiler(src="/static/img/Family.jpg", alt="")
-        p As a parent you learn that each of your kids is completely different, and when it comes to parenting we definetly handle each separately.  I try and stay educated with my children’s different medical needs.  I want to try and help them in any way I can.  Being a parent who is fighting cancer, and dealing with two child who have their own special needs is no easy task, but having Waylon on my side sure does make it more enjoyable.  We strive to take everything one breath at a time!
+        p As a parent you learn that each of your kids is completely different, and when it comes to parenting we definetly handle each separately.  I try and stay educated with my children’s different medical needs.  I want to try and help them in any way I can.  Being a parent who is fighting cancer, and dealing with two children who have their own special needs is no easy task, but having Waylon on my side sure does make it more enjoyable.  We strive to take everything one breath at a time!
 
 
