rendered with updated meta tags

--- a/templates/layout/layout.pug
+++ b/templates/layout/layout.pug
@@ -4,10 +4,10 @@ html(lang='en')
 block config
     -
         const config = {
-            site_name: 'Cuttin Scrap',
+            site_name: '@cuttinscrap',
             title: "Let's Start Cuttin Scrap",
             description: "When crafting from the heart, perfection is not the main goal. Here at Cuttin Scrap I push towards having fun and using what you have around the house. These projects are not meant for Muffy McPerfect Pants, but for the everyday crafter. I, Rhiannon Walker, fight Atypical Carcinoid Cancer of the lungs everyday, and use crafting as my way to let loose. Come on a journey with me, where the road is never straigh",
-            image: "/static/img/logo/cuttin scrap final white.jpg",
+            image: "http://www.cuttinscrap.com/static/img/logo/cuttin%20scrap%20final%20white.jpg",
             url: "http://www.cuttinscrap.com",
             card: "summary_large_image",
             fb_app_id: 'NA',
@@ -34,6 +34,7 @@ head
         meta(name='twitter:card' content=config.card)
         meta(property='fb:app_id' content=config.fb_app_id)
         meta(name='twitter:site' content=config.twitter)
+
         if config.blog
             meta(name='blog:n' content=config.blog)
         if config.project
