--- a/templates/pages/blog/19/index.pug
+++ b/templates/pages/blog/19/index.pug
@@ -2,8 +2,9 @@ extends ../../../layout/layout
 
 block append config
     -
-        config.title = "";
-        config.description = "";
+        config.title = "Sensory Processing Disorder";
+        config.description = "Sensory Processing Disorder.  What does it mean?  It means the the paitents brain takes what we usually can handle like touching different textures, feeling different temperatures, dealing with new situations, doing things out of order, and eating or drinking different substances and they catergorize them as a catastrophic event.";
+        config.image = "https://giphy.com/embed/11tTNkNy1SdXGg"
         config.url = "http =//www.cuttinscrap.com/blog/19";
         config.card = "summary";
         config.disqus = true;
