--- a/templates/pages/project/1/index.pug
+++ b/templates/pages/project/1/index.pug
@@ -4,9 +4,9 @@ block append config
     -
         config.title = "Woodland Applique";
         config.description = "When I got the news that my close friend is having a baby, I knew right away that I wanted to make a quilt for her baby shower. I was so excited to take on this task, but at the same time I was worried it would not be done in time. My previous project took me 3 years…seriously!!! That’s why I went on a search for an easy method to making a cute project.";
-        config.url = "http =//www.cuttinscrap.com/project/1";
-        config.card = "summary";
         config.image = "www.cuttinscrap.com/static/img/projects/woodland-applique.jpg"
+        config.url = "http://www.cuttinscrap.com/project/1/";
+        config.card = "summary";
         config.disqus = true;
         config.project = 1;
     -
