--- a/templates/pages/project/2/index.pug
+++ b/templates/pages/project/2/index.pug
@@ -4,7 +4,8 @@ block append config
     -
         config.title = "Crown Bag Quilt";
         config.description = "I may have given this present multiple years in a row, because it wasn’t done in time.  Also, this was my first realization at how much it cost to make a complete quilt.";
-        config.url = "http =//www.cuttinscrap.com/project/2";
+        config.image = "http://www.cuttinscrap.com/static/img/projects/2/finished_a.jpg";
+        config.url = "http://www.cuttinscrap.com/project/2";
         config.card = "summary";
         config.disqus = true;
         config.project = 2;
@@ -15,7 +16,7 @@ block append config
 block content
 
     #projects.card    
-        include:markdown-it content.md
+        include content
 
 
 
