--- a/templates/pages/blog/12/index.pug
+++ b/templates/pages/blog/12/index.pug
@@ -4,7 +4,7 @@ block append config
     -
         config.title = "Let's Start Cuttin Scrap";
         config.description = "When crafting from the heart, perfection is not the main goal. Here at Cuttin Scrap I push towards having fun and using what you have around the house. These projects are not meant for Muffy McPerfect Pants, but for the everyday crafter. I, Rhiannon Walker, fight Atypical Carcinoid Cancer of the lungs everyday, and use crafting as my way to let loose. Come on a journey with me, where the road is never straigh";
-        config.url = "http =//www.cuttinscrap.com/blog/12/";
+        config.url = "http://www.cuttinscrap.com/blog/12/";
         config.card = "summary";
         config.disqus = true;
         config.blog = true;
