--- a/templates/pages/blog/16/index.pug
+++ b/templates/pages/blog/16/index.pug
@@ -4,7 +4,7 @@ block append config
     -
         config.title = "Diving Deep";
         config.description = "I am an imperfect person.  I am terrified of making new friends.  I love going out.  I am a negative person.  I can't write on wrinkled paper.";
-        config.url = "http =//www.cuttinscrap.com/blog/16";
+        config.url = "http://www.cuttinscrap.com/blog/16";
         config.card = "summary";
         config.disqus = true;
         config.blog = 16;
