--- a/templates/pages/blog/17/index.pug
+++ b/templates/pages/blog/17/index.pug
@@ -4,7 +4,7 @@ block append config
     -
         config.title = "Another Blow";
         config.description = "2AM and Gizmo hops off the bed.  I growl at the thought of going down stairs to let him out. Then I think of his poor choices to go potty inside. Shit. I decide to take on the responsibility and drag my tired butt out of bed.  I take the first step down the stairs when all the sudden";
-        config.url = "http =//www.cuttinscrap.com/blog/17";
+        config.url = "http://www.cuttinscrap.com/blog/17";
         config.card = "summary";
         config.disqus = true;
         config.blog = 17;
