--- a/templates/pages/blog/5/index.pug
+++ b/templates/pages/blog/5/index.pug
@@ -4,7 +4,7 @@ block append config
     -
         config.title = "The Date has been set...";
         config.description = "Things have been flying since we met with the surgeon in St Louis. The surgeon needs a clear picture to decide the right direction during surgery, so they decided to do another repeat bronchoscopy right before surgery.<br><br><strong>Surgery is Monday!!</strong><br>";
-        config.url = "http =//www.cuttinscrap.com/blog/5/";
+        config.url = "http://www.cuttinscrap.com/blog/5/";
         config.card = "summary";
         config.disqus = true;
         config.blog = true;
