--- a/templates/pages/blog/6/index.pug
+++ b/templates/pages/blog/6/index.pug
@@ -4,7 +4,7 @@ block append config
     -
         config.title = "Recovery";
         config.description = "Starting from the beginning of post surgery recovery, Monday......hmmm, I don't remember much from Monday, I was told I was joking with my Dad nice to hear my sense of humor survived the surgery.";
-        config.url = "http =//www.cuttinscrap.com/blog/6/";
+        config.url = "http://www.cuttinscrap.com/blog/6/";
         config.card = "summary";
         config.disqus = true;
         config.blog = true;
