--- a/templates/pages/blog/3/index.pug
+++ b/templates/pages/blog/3/index.pug
@@ -4,7 +4,7 @@ block append config
     -
         config.title = "The Hard Days have Begun...";
         config.description = "Things are starting to line up, and tomorrow is the day I meet with the surgeon. Wyatt is going to start all day preschool to try and help him get things under control. I'm feeling very overwhelmed.";
-        config.url = "http =//www.cuttinscrap.com/blog/3/";
+        config.url = "http://www.cuttinscrap.com/blog/3/";
         config.card = "summary";
         config.disqus = true;
         config.blog = true;
