--- a/templates/pages/blog/4/index.pug
+++ b/templates/pages/blog/4/index.pug
@@ -4,7 +4,7 @@ block append config
     -
         config.title = "Christmas Time....ehhh";
         config.description = "Christmas is two weeks away and traffic is insane in Peoria. I am struggling to find the cheer that the holiday season usually brings.";
-        config.url = "http =//www.cuttinscrap.com/blog/4/";
+        config.url = "http://www.cuttinscrap.com/blog/4/";
         config.card = "summary";
         config.disqus = true;
         config.blog = true;
