--- a/templates/pages/project/3/index.pug
+++ b/templates/pages/project/3/index.pug
@@ -6,7 +6,7 @@ block append config
         config.description = "I am a firm believer that there are things in life that remind us of our loved ones, and even help us feel their presence when they are gone.  For my in-laws an Eagle is the representation that reminds us of Grandpa Haight.  He was a great man and I am honored that I got to know him.  I made this wall hanging to represent him flying above his cabin and forever flying in our hearts.";
         config.image = "http://www.cuttinscrap.com/static/img/projects/3/finished.jpg";
         config.url = "http://www.cuttinscrap.com/project/3/";
-        config.card = "summary_image_large";
+        config.card = "summary";
         config.disqus = true;
         config.project = 3;
     -
