--- a/static/sass/layout/_footer.sass
+++ b/static/sass/layout/_footer.sass
@@ -25,4 +25,5 @@ footer
             font-size: 1.5rem
         .username
             display: none
-                
+    #socials .title
+        display: none
