--- a/templates/layout/logo.pug
+++ b/templates/layout/logo.pug
@@ -1,6 +1,6 @@
 #logo
     a(href="/")
-        img(src="/static/img/logo/cuttin scrap final white.png",
+        img(src="/static/img/logo/cuttinscrap.png",
         - alt="scissors")
     //- h1 
         a(href="/") Cuttin Scrap
