--- a/templates/layout/navigation.pug
+++ b/templates/layout/navigation.pug
@@ -2,7 +2,7 @@ nav.init
     #nav-btn
         #ham ☰
         #x X
-    
+        include socials 
     #site-navigation
         ul
             li 
