--- a/templates/pages/blog/20/index.pug
+++ b/templates/pages/blog/20/index.pug
@@ -2,7 +2,7 @@ extends ../../../layout/layout
 
 block append config
     -
-        config.title = "Short Sappy Necessary Blog";
+        config.title = "Short, Sappy, Necessary Blog";
         config.description = "I read the fairy tales that talked of a princess stranded and waiting for her knight in shining armor to come and rescue her.  I grew up watching the chick flicks with my mom, and the general consensus was the same.  These stories were all fake.  These things never happened right?  Well, I’m no princess.  But I have a knight in shining armor.";
         config.image = "http://www.cuttinscrap.com/static/img/blog/20171205_083321.jpg";
         config.url = "http//www.cuttinscrap.com/blog/20";
