--- a/static/sass/base/_typography.sass
+++ b/static/sass/base/_typography.sass
@@ -25,3 +25,11 @@ h6
 
 em
     font-family: 'Shadows Into Light', cursive 
+
+h1 > a,
+h2 > a,
+h3 > a,
+h4 > a,
+h5 > a,
+h6 > a,
+    text-decoration: none
