--- a/static/sass/layout/_cards.sass
+++ b/static/sass/layout/_cards.sass
@@ -1,18 +1,11 @@
 
-
-.card
-    border-top: 3rem solid #444
+.card-clear
     display: block
     border-radius: $br
-    min-height: 100px
-    background-color: #FFF
-    // padding: 0.5rem
     margin: 2rem auto
-    box-shadow: $bs
 
     p
         padding: 0.5rem 2.5rem 
-    
 
     h1:first-child,
     h2:first-child,
@@ -20,10 +13,22 @@
     h4:first-child,
     h5:first-child,
     h6:first-child,
-        // border-radius: $br $br 0 0
         margin: 0
-        text-align: center
-        padding: 0rem 0 0 0
+        padding: 0
+
+.card
+    @extend .card-clear
+    border-top: 3rem solid #444
+    background-color: #FFF
+    box-shadow: $bs
+    
+    h1:first-child,
+    h2:first-child,
+    h3:first-child,
+    h4:first-child,
+    h5:first-child,
+    h6:first-child,
+        text-align: center 
         background-color: #444
         
     img
@@ -37,15 +42,14 @@
         
     
     >p:first-of-type
+        font-size: 2rem
         padding: 0.5rem
+        padding-b
         margin: 0
         margin-bottom: 1rem 
         background-color: #444 
         text-align: center
     
-    >p:nth-of-type(2)
-        padding-top: 2.5rem
-
     ul 
         padding: 1rem
         
