--- a/static/sass/layout/_disqus.sass
+++ b/static/sass/layout/_disqus.sass
@@ -1,5 +1,8 @@
-#disqus_thread
+#disqus
+    display: block
+    overflow: hidden
     max-width: 500px
-    margin: auto
-    border: 1rem solid rgba(0, 0, 0, 0)
-    margin-top: 5rem
+    width: calc(100vw - 4rem)
+    margin: 1rem auto
+    margin-top: 2rem
+
