--- a/static/sass/layout/_grid.sass
+++ b/static/sass/layout/_grid.sass
@@ -7,9 +7,12 @@
 //         grid-template-rows: auto auto 600px auto
 //         grid-gap: 3rem
         
-#blog-promo
-    margin-top: 5rem
-    margin-bottom: 10rem
+// #blog-promo
+//     margin-top: 5rem
+//     margin-bottom: 10rem
+
+
+
 #disqus
     grid-area: disqus
     margin: auto
@@ -20,7 +23,7 @@
     max-width: 800px
     
     margin: auto
-    margin-top: 0rem
+    padding: 0.5rem
     
     .card
         padding-bottom: 5rem 
