--- a/static/sass/layout/_navigation.sass
+++ b/static/sass/layout/_navigation.sass
@@ -1,13 +1,31 @@
 nav
+    // .socials
+    //     position: relative
+    //     left: -2rem
     font-size: 1.4rem
-    width: 100%
+    width: calc(100vw - 4rem)
     grid-area: nav
-    // min-height: 100px
+    // min-height: 500px
+
+    max-width: 800px
+    margin: auto
+    padding: 0 1rem
+    display: block
+    #ham, #X
+        float: left
+        text-align: left
+        vertical-align: middle
+        padding: 2rem 0rem
+        margin: 0 4rem 0 0
+        cursor: pointer
+
     #nav-btn
         font-size: 1.8rem
         text-align: center
-        cursor: pointer
         font-family: arial
+        // display: flex
+        vertical-align: middle
+        align-items: center
     #site-navigation
         height: 1rem
 
@@ -30,7 +48,7 @@ nav
             li
                 flex: 1 1 auto
                 text-align: center
-                margin: 1.4rem
+                margin: 1.5rem
                 opacity: 0
 
             .fixed
@@ -45,6 +63,7 @@ nav.init
         display: none
     #site-navigation
         height: 0
+        display: none
 nav.off
     #x
         display: none
@@ -52,6 +71,7 @@ nav.off
         animation: up
         animation-duration: 300ms
         fill-mode: forwards
+        display: none
         ul
             li
                 opacity: 0
@@ -66,6 +86,7 @@ nav.on
         display: block
 
     #site-navigation
+            display: block
             height: auto
             animation: down
             animation-duration: 500ms
