--- a/static/sass/pages/_projects.sass
+++ b/static/sass/pages/_projects.sass
@@ -1,8 +1,8 @@
 
 #projects
     
-    h1, h2, h3, h4, h5, h6
-        padding: 2rem
+    // h1, h2, h3, h4, h5, h6
+    //     padding: 2rem
     h2
         padding: 0
         margin: 0
