--- a/templates/layout/footer.pug
+++ b/templates/layout/footer.pug
@@ -3,20 +3,21 @@ footer
   p
     em Share your scraps with us
 
-  ul
-    li
-      a(href='https://twitter.com/cuttinscrap')
-        i.fa.fa-twitter(aria-hidden='true')
-        |  #[span.username @cuttinscrap]
-    li
-      a(href='https://www.instagram.com/cuttin.scrap/')
-        i.fa.fa-instagram(aria-hidden='true')
-        |  #[span.username @cuttin.scrap]
-    li
-      a(href='https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A')
-        i.fa.fa-youtube(aria-hidden='true')
-        |  #[span.username Cuttin Scrap]
-    li
-      a(href='https://www.facebook.com/cuttinscrap/')
-        i.fa.fa-facebook(aria-hidden='true')
-        |  #[span.username Cuttin Scrap]
+  include socials
+  //- ul
+  //-   li
+  //-     a(href='https://twitter.com/cuttinscrap')
+  //-       i.fa.fa-twitter(aria-hidden='true')
+  //-       |  #[span.username @cuttinscrap]
+  //-   li
+  //-     a(href='https://www.instagram.com/cuttin.scrap/')
+  //-       i.fa.fa-instagram(aria-hidden='true')
+  //-       |  #[span.username @cuttin.scrap]
+  //-   li
+  //-     a(href='https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A')
+  //-       i.fa.fa-youtube(aria-hidden='true')
+  //-       |  #[span.username Cuttin Scrap]
+  //-   li
+  //-     a(href='https://www.facebook.com/cuttinscrap/')
+  //-       i.fa.fa-facebook(aria-hidden='true')
+  //-       |  #[span.username Cuttin Scrap]
