--- a/templates/layout/layout.pug
+++ b/templates/layout/layout.pug
@@ -1,10 +1,9 @@
-doctype html
 html(lang='en')
 
 block config
     -
         const config = {
-            site_name: '@cuttinscrap',
+            site_name: 'cuttinscrap.com',
             title: "Let's Start Cuttin Scrap",
             description: "When crafting from the heart, perfection is not the main goal. Here at Cuttin Scrap I push towards having fun and using what you have around the house. These projects are not meant for Muffy McPerfect Pants, but for the everyday crafter. I, Rhiannon Walker, fight Atypical Carcinoid Cancer of the lungs everyday, and use crafting as my way to let loose. Come on a journey with me, where the road is never straigh",
             image: "http://www.cuttinscrap.com/static/img/logo/cuttin%20scrap%20final%20white.jpg",
@@ -12,6 +11,8 @@ block config
             card: "summary",
             fb_app_id: 'NA',
             twitter:'@cuttinscrap',
+            time: "",
+            author: "Rhiannon Walker",
             disqus:false,
             blog: 0,
             project: 0
@@ -31,6 +32,8 @@ head
         meta(property='og:description' content=config.description)
         meta(property='og:image' content=config.image)
         meta(property='og:url' content=config.url)
+        meta(property='og:published_time' content=config.time)
+        meta(property='og:author' content=config.author)
         meta(name='twitter:card' content=config.card)
         meta(property='fb:app_id' content=config.fb_app_id)
         meta(name='twitter:site' content=config.twitter)
@@ -39,8 +42,6 @@ head
             meta(name='blog:n' content=config.blog)
         if config.project
             meta(name='project:n' content=config.project)
-
-
 
         title CuttinScrap
 
@@ -54,11 +55,12 @@ head
 
 block body
     body
-        
-        include ../layout/logo
-        include ../layout/socials
-        include ../layout/navigation
-        
+
+        #hero
+            include ../layout/logo
+            //- include ../layout/socials
+            include ../layout/navigation
+            
         div#content
             if config.blog
                 include blog_intro
@@ -66,27 +68,26 @@ block body
                 include project_intro
 
             block content
-                div#hero
-                    h1 Cuttin Scrap
-
-                    include ../layout/about
-                
-                include ../layout/socials
 
             if config.blog
                 #blog-promo
-                    h3 Check out our other blog posts 
+                    //- h3 Check out our other blog posts 
                     #next.card.hide
                     #prev.card.hide
             if config.project
                 #blog-promo
-                    h3 Check out our other projects
+                    //- h3 Check out our other projects
                     #next.card.hide
                     #prev.card.hide
 
-            include ../layout/about_rhiannon
+            #instagram.card
+                h1 #[a(href='https://www.instagram.com/cuttin.scrap/') #[i.fa.fa-instagram(aria-hidden='true')] #[span(style='font-size:1rem;vertical-align:middle;') |] CuttinScrap]
+                p
+                    em 
+                #instafeed 
+            
+            //- include ../pages/youtube.html
 
-        
         div#disqus
             if config.disqus
                 include ../layout/disqus
@@ -97,3 +98,18 @@ block body
 
 block script
 
+    if config.blog
+        script.
+            document.addEventListener("DOMContentLoaded", function () {
+                blog = new Blog()
+                blog.promo(blog.next_url, '#next')
+                blog.promo(blog.prev_url, '#prev')
+            })
+
+    if config.project
+        script.
+            document.addEventListener("DOMContentLoaded", function () {
+                blog = new Blog()
+                blog.promo(blog.next_url, '#next')
+                blog.promo(blog.prev_url, '#prev')
+            })
