--- a/templates/layout/layout.pug
+++ b/templates/layout/layout.pug
@@ -48,6 +48,8 @@ head
         link(rel='stylesheet' href='/static/css/main.css')
         include gtag.html
         script(src="/static/js/nav.js")
+        script(src="/static/js/insta.js")
+
         if config.blog 
             script(src="/static/js/blog.js")
         if config.project
