--- a/static/sass/layout/_socials.sass
+++ b/static/sass/layout/_socials.sass
@@ -52,3 +52,9 @@
     justify-content: center
     img
         margin: 1rem
+
+#youtube_video
+    display: block
+    margin: auto
+    box-shadow: $bs
+    // border: 3px solid $teal
