--- a/templates/layout/layout.pug
+++ b/templates/layout/layout.pug
@@ -38,6 +38,8 @@ head
         meta(property='fb:app_id' content=config.fb_app_id)
         meta(name='twitter:site' content=config.twitter)
 
+        meta(name='google-site-verification' content='zjlaVrUj_Wy5cgrDUsm2e2cdJyQbatv5tv5tyUEp8oOLi' )
+
         if config.blog
             meta(name='blog:n' content=config.blog)
         if config.project
@@ -49,6 +51,7 @@ head
         include gtag.html
         script(src="/static/js/nav.js")
         script(src="/static/js/insta.js")
+        script(src='/static/js/latest_video.js')
 
         if config.blog 
             script(src="/static/js/blog.js")
@@ -86,7 +89,9 @@ block body
                 h1 #[a(href='https://www.instagram.com/cuttin.scrap/') #[i.fa.fa-instagram(aria-hidden='true')] #[span(style='font-size:1rem;vertical-align:middle;') |] CuttinScrap]
                 p
                     em 
-                #instafeed 
+                #instafeed
+            
+            include latest_video
             
             //- include ../pages/youtube.html
 
