--- a/templates/layout/latest_video.pug
+++ b/templates/layout/latest_video.pug
@@ -1,7 +1,6 @@
 #latest_video.card
-    h1 YouTube
+    h1 #[a(href='https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A') #[i.fa.fa-youtube(aria-hidden='true')] CuttinScrap]
     p
-        em Check out the latest video
+        em#youtube_title Check out the latest video
 
     iframe#youtube_video(width='600' height='340' frameborder='0' allowfullscreen='')
-    
