--- a/templates/layout/latest_video.pug
+++ b/templates/layout/latest_video.pug
@@ -3,4 +3,4 @@
     p
         em#youtube_title Check out the latest video
 
-    iframe#youtube_video(width='600' height='340' frameborder='0' allowfullscreen='')
+    iframe#youtube_video.video(width='600' height='340' frameborder='0' allowfullscreen='')
