--- a/static/sass/layout/_socials.sass
+++ b/static/sass/layout/_socials.sass
@@ -53,6 +53,17 @@
     img
         margin: 1rem
 
+#youtube_video
+    height: 340
+    width: 600
+    max-width: 100% important
+    // width: auto
+    // height: auto
+
+    @include breakpoint(xs)
+        height: 227
+        width: 400
+    
 .video
     display: block
     margin: auto
