--- a/static/sass/layout/_navigation.sass
+++ b/static/sass/layout/_navigation.sass
@@ -107,6 +107,10 @@ nav.on
                                 timing-function: ease-in-out
                                 fill-mode: forwards
 
+#blog-map
+    ul
+        li
+            padding: 1rem
 @include breakpoint(sm)
     nav
         font-size: 1rem
