--- a/templates/pages/blog/16/index.pug
+++ b/templates/pages/blog/16/index.pug
@@ -15,7 +15,7 @@ block append config
 block content
 
     div.card    
-        include:markdown-it blog_16.md    
+        include:markdown-it content.md    
 
 
 
