--- a/templates/pages/blog/17/index.pug
+++ b/templates/pages/blog/17/index.pug
@@ -8,6 +8,7 @@ block append config
         config.card = "summary";
         config.disqus = true;
         config.blog = 17;
+        config.time = 'December 28, 2017';
     -
 
     
