--- a/templates/pages/blog/19/index.pug
+++ b/templates/pages/blog/19/index.pug
@@ -8,7 +8,8 @@ block append config
         config.url = "http://www.cuttinscrap.com/blog/19";
         config.card = "summary";
         config.disqus = true;
-        config.blog = 19;
+        config.blog = true;
+        config.time = 'January 4, 2018';
     -
 
     
