--- a/templates/pages/blog/20/index.pug
+++ b/templates/pages/blog/20/index.pug
@@ -9,6 +9,7 @@ block append config
         config.card = "summary";
         config.disqus = true;
         config.blog = 20;
+        config.time = 'January 25, 2018';
     -
 
     
