--- a/templates/pages/blog/21/index.pug
+++ b/templates/pages/blog/21/index.pug
@@ -8,6 +8,7 @@ block append config
         config.card = "summary";
         config.disqus = true;
         config.blog = 22;
+        config.time = 'February 9, 2018';
     -
 
     
