--- a/templates/pages/blog/3/index.pug
+++ b/templates/pages/blog/3/index.pug
@@ -8,9 +8,10 @@ block append config
         config.card = "summary";
         config.disqus = true;
         config.blog = true;
+        config.time = 'December 5, 2016'
     -
-
     
+
 
 block content
 
