--- a/templates/pages/project/1/index.pug
+++ b/templates/pages/project/1/index.pug
@@ -9,6 +9,7 @@ block append config
         config.card = "summary";
         config.disqus = true;
         config.project = 1;
+        config.time = 'July 1, 2016';
     -
 
     
