--- a/static/sass/layout/_cards.sass
+++ b/static/sass/layout/_cards.sass
@@ -3,6 +3,9 @@
     display: block
     border-radius: $br
     margin: 2rem auto
+    // background-colsor: #FFF
+    // box-shadow: $bs
+    // border: 1px solid #999
 
     p
         padding: 0.5rem 2.5rem 
