--- a/templates/pages/blog/1/index.pug
+++ b/templates/pages/blog/1/index.pug
@@ -8,6 +8,7 @@ block append config
         config.card = "summary";
         config.disqus = true;
         config.blog = true;
+        config.time = 'November 25, 2016';
     -
 
 block content
