--- a/templates/pages/blog/18/index.pug
+++ b/templates/pages/blog/18/index.pug
@@ -8,6 +8,7 @@ block append config
         config.card = "summary";
         config.disqus = true;
         config.blog = 18;
+        config.time = 'January 4, 2018';
     -
 
     
