--- a/templates/pages/blog/22/index.pug
+++ b/templates/pages/blog/22/index.pug
@@ -8,6 +8,7 @@ block append config
         config.card = "summary";
         config.disqus = true;
         config.blog = 21;
+        config.time = 'February 8, 2018';
     -
 
     
