--- a/templates/pages/blog/6/index.pug
+++ b/templates/pages/blog/6/index.pug
@@ -8,6 +8,7 @@ block append config
         config.card = "summary";
         config.disqus = true;
         config.blog = true;
+        config.time = 'December 23, 2016';
     -
 
     
