--- a/templates/pages/index.pug
+++ b/templates/pages/index.pug
@@ -4,13 +4,12 @@ block append head
     script(src="/static/js/blog.js")
 
 block content
-    div#hero.card
-        h1 Welcome!
-        p
+    div#hero.card-clear
 
         //- img(src="/static/img/Projects/woodland-applique.jpg", alt="")
-        include ../layout/about
+        //- include ../layout/about
         //- include project/index
+    include ../layout/latest_video
 
     #instagram
         //- include insta.html
@@ -28,6 +27,6 @@ block script
         document.addEventListener("DOMContentLoaded", function () {
             blog = new Blog('blog')
             project = new Blog('project')
-            blog.promo('/blog/', '#latest-blog')
-            project.promo('/project/', '#latest-project')
+            blog.promo('/blog/', '#latest-blog', 'Latest Blog')
+            project.promo('/project/', '#latest-project', 'Latest Project')
         })
