--- a/templates/layout/project_map.pug
+++ b/templates/layout/project_map.pug
@@ -1,10 +1,13 @@
 ul
+    //- for page in project_map
+        //- li
+        //-     details
+        //-         summary
+        //-             a(href=page['link'])=page['title']
+
+        //-         p=page['title']
+        //-         p=page['date']
+        //-         p=page['desc']
     for page in project_map
         li
-            details
-                summary
-                    a(href=page['link'])=page['title']
-
-                p=page['title']
-                p=page['date']
-                p=page['desc']
+            a(href=page['link'])=page['title']
