--- a/static/sass/layout/_socials.sass
+++ b/static/sass/layout/_socials.sass
@@ -66,6 +66,10 @@
     
 .video
     display: block
-    margin: auto
+    margin: 2rem auto
     box-shadow: $bs
+
+    @include breakpoint(xs)
+        height: 170
+        width: 300
     // border: 3px solid $teal
