--- a/templates/layout/blog_map.pug
+++ b/templates/layout/blog_map.pug
@@ -1,4 +1,4 @@
-ul
+ul.no-pad
     //- for page in blog_map
     //-     li
     //-         details
@@ -11,4 +11,4 @@ ul
     for page in blog_map
         li
             a(href=page['link'])=page['date']
-            p=page['title']
+            //- p=page['title']
