--- a/templates/layout/latest_video.pug
+++ b/templates/layout/latest_video.pug
@@ -3,4 +3,6 @@
     p
         em#youtube_title Check out the latest video
 
+    p#desc
+    
     iframe#youtube_video.video(frameborder='0' allowfullscreen='')
