--- a/templates/pages/project/4/index.pug
+++ b/templates/pages/project/4/index.pug
@@ -9,13 +9,14 @@ block append config
         config.card = "summary";
         config.disqus = true;
         config.project = 4;
+        config.time = 'February 12, 2018'
     -
 
     
 
 block content
 
-    #projects.card    
+    .card    
         include content
 
 
