--- a/static/sass/layout/_about.sass
+++ b/static/sass/layout/_about.sass
@@ -1,32 +1,13 @@
-.about
-    // max-width: 300px
-    img
-        max-width: 200px
-        border-radius: 50%
-        box-shadow: $bs 
-    p
-        margin: 3rem 0
-    p:first-of-type
-        margin-top: 0
-        
 #about_rhiannon
     grid-area: about_rhiannon
     margin: 0 auto
     
-    // background: white
-    // border-radius: $br
-    // box-shadow: $bs
-    // padding: 1rem
-
-
-
 .profile
+    box-shadow: $bs
     float: left
     position: relative
-    // top: 5rem
     margin: 1rem!important
     
-    // margin-top: -5rem!important
     border-radius: 50%!important
     shape-outside: circle()
     -webkit-shape-outside: circle()
@@ -35,20 +16,9 @@
     width: 100px
     @include breakpoint(sm)
         width: 300px
-        
-.profiler
+
+.profile-right
+    @extend .profile
     float: right
-    position: relative
-    // top: 5rem
-    margin: 1rem!important
-    
-    // margin-top: -5rem!important
-    border-radius: 50%!important
-    shape-outside: circle()
-    -webkit-shape-outside: circle()
         
-
-    width: 100px
-    @include breakpoint(sm)
-        width: 300px
     
