--- a/static/sass/layout/_cards.sass
+++ b/static/sass/layout/_cards.sass
@@ -24,7 +24,14 @@
     border-top: 3rem solid #444
     background-color: #FFF
     box-shadow: $bs
-    
+
+    h2
+        padding: 0
+        margin: 0
+        margin-top: 1rem
+        margin-left: 1rem
+        font-size: 1.5rem 
+
     h1:first-child,
     h2:first-child,
     h3:first-child,
@@ -67,6 +74,14 @@
             padding-top: 0.6rem
     em > a
         text-decoration: none
+
+    blockquote      
+        padding-left: 5rem
+        p
+            font-family: 'Shadows Into Light', cursive
+            border-left: 4px solid $teal
+            background: none 
+            
 .sm-card
     @extend .card
 
@@ -75,3 +90,6 @@
     max-width: 300px 
 .hide
     display: none
+
+.no-pad
+    padding: 0!important
