--- a/static/sass/layout/_grid.sass
+++ b/static/sass/layout/_grid.sass
@@ -1,18 +1,25 @@
-// body
-//     border: 1rem solid rgba(0, 0, 0, 0)
-//     @include breakpoint(sm)
-//         display: grid
-//         grid-template-areas: "logo logo"  "nav aboutnav_rhiannon" "content about_rhiannon" "content socials" "disqus disqus" "foot foot"
-//         grid-template-columns: 2fr 1fr
-//         grid-template-rows: auto auto 600px auto
-//         grid-gap: 3rem
+body
+    border: 1rem solid rgba(0, 0, 0, 0)
+    @include breakpoint(sm)
+        display: grid
+        grid-template-areas: "nav nav" "intro intro" "blog-map content" "disqus disqus" "instagram instagram" "foot foot"
+        grid-template-columns: 1fr 2fr
+        // grid-template-rows: auto auto 600px auto
+        grid-gap: 1rem
         
 // #blog-promo
 //     margin-top: 5rem
 //     margin-bottom: 10rem
-
-
-
+#intro
+    grid-area: intro
+#hero
+    grid-area: nav
+#instagram
+    grid-area: instagram
+#blog-map
+    grid-area: blog-map
+#blog-promo
+    grid-area: blog-map
 #disqus
     grid-area: disqus
     margin: auto
