about and uses no promos

--- a/templates/pages/about/index.pug
+++ b/templates/pages/about/index.pug
@@ -9,12 +9,10 @@ block append config
         config.card = "summary";
         config.disqus = true;
         config.time = 'January 1, 2018';
-        config.blog_promo = 1;
-        config.project_promo = 1;
+        //- config.blog_promo = 1;
+        //- config.project_promo = 1;
         config.disqus = 0;
     -
-
-
 
 block content
 
