blog 23 edit\n added image

--- a/static/sass/layout/_cards.sass
+++ b/static/sass/layout/_cards.sass
@@ -81,7 +81,9 @@
             font-family: 'Shadows Into Light', cursive
             border-left: 4px solid $teal
             background: none 
-            
+    .pad
+        display: block
+        padding: 2rem
 .sm-card
     @extend .card
 
