--- a/static/sass/layout/_logo.sass
+++ b/static/sass/layout/_logo.sass
@@ -29,3 +29,13 @@ img
     
     h1
         margin-top: 0.5rem
+
+.right
+    float: right
+    position: relative
+    margin: 1rem
+
+.left
+    float: left
+    position: relative
+    margin: 1rem
