--- a/templates/pages/blog/23/index.pug
+++ b/templates/pages/blog/23/index.pug
@@ -4,11 +4,11 @@ block append config
     -
         config.title = "The Bravery Within";
         config.description = "When I woke up on Monday, I had this pressure in my chest that I just couldn’t shake.  The tears started rolling and I felt as if I was getting jammed into a mini refrigerator by a sumo wrestler.  I was cold, oh so cold.  My mind was racing and I was shaken to the core.";
-        config.url = "http://www.cuttinscrap.com/blog/22";
+        config.url = "http://www.cuttinscrap.com/blog/23";
         config.card = "summary";
         config.disqus = true;
-        config.blog = 22;
-        config.time = 'February 8, 2018';
+        config.blog = 23;
+        config.time = 'March 19, 2018';
     -
 
     
@@ -16,7 +16,7 @@ block append config
 block content
 
     div.card    
-        include:markdown-it content.md    
+        include content  
 
 
 
