pug pretty:true

--- a/templates/pages/blog/23/index.pug
+++ b/templates/pages/blog/23/index.pug
@@ -9,6 +9,7 @@ block append config
         config.disqus = true;
         config.blog = 23;
         config.time = 'March 19, 2018';
+        config.image = 'http://www.cuttinscrap.com/static/img/blog/20180226_163330.jpg'
     -
 
     
