--- a/templates/pages/blog/23/index.pug
+++ b/templates/pages/blog/23/index.pug
@@ -4,7 +4,7 @@ block append config
     -
         config.title = "The Bravery Within";
         config.description = "When I woke up on Monday, I had this pressure in my chest that I just couldn’t shake.  The tears started rolling and I felt as if I was getting jammed into a mini refrigerator by a sumo wrestler.  I was cold, oh so cold.  My mind was racing and I was shaken to the core.";
-        config.url = "http://www.cuttinscrap.com/blog/23/";
+        config.url = "www.cuttinscrap.com/blog/23/";
         config.card = "summary";
         config.disqus = true;
         config.blog = 23;
