--- a/templates/layout/layout.pug
+++ b/templates/layout/layout.pug
@@ -23,7 +23,7 @@ block config
 
 head
     block head
-        meta(property='og:site_name' content=site_name)
+        meta(property='og:site_name' content=config.site_name)
         meta(property='og:title' content=config.title)
         meta(property='og:description' content=config.description)
         meta(property='og:image' content=config.image)
