--- a/templates/pages/blog/23/index.pug
+++ b/templates/pages/blog/23/index.pug
@@ -3,7 +3,7 @@ extends ../../../layout/layout
 block append config
     -
         config.title = "The Bravery Within";
-        config.description = "When I woke up on Monday, I had this pressure in my chest that I just couldn’t shake.  The tears started rolling and I felt as if I was getting jammed into a mini refrigerator by a sumo wrestler.  I was cold, oh so cold.  My mind was racing and I was shaken to the core.";
+        config.description = "Today I picked up the kids for the first time in over 6 months.  Today I watched as bravery took over my 5 year olds face and he held it together when his mom lost her strength.  He held it together to figure out how to unbuckle his car seat, (which he has never done before)";
         config.url = "www.cuttinscrap.com/blog/23/";
         config.card = "summary";
         config.disqus = true;
