--- a/templates/pages/blog/23/index.pug
+++ b/templates/pages/blog/23/index.pug
@@ -4,7 +4,7 @@ block append config
     -
         config.title = "The Bravery Within";
         config.description = "Today I picked up the kids for the first time in over 6 months.  Today I watched as bravery took over my 5 year olds face and he held it together when his mom lost her strength.  He held it together to figure out how to unbuckle his car seat, (which he has never done before)";
-        config.url = "www.cuttinscrap.com/blog/23/";
+        config.url = "http://www.cuttinscrap.com/blog/23/";
         config.card = "summary";
         config.disqus = true;
         config.blog = 23;
