--- a/templates/layout/layout.pug
+++ b/templates/layout/layout.pug
@@ -29,7 +29,7 @@ head
         meta(property='og:title' content=config.title)
         meta(property='og:description' content=config.description)
         meta(property='og:image' content=config.image)
-        meta(property='og:url' content=config.url)
+        //- meta(property='og:url' content=config.url)
         meta(property='og:published_time' content=config.time)
         meta(property='og:author' content=config.author)
         meta(name='twitter:card' content=config.card)
