Removed Twitter Link from socials.pug
Then Gulp

commit a82c255eb84e7fd2beb0fb9cf13100adbc6dfa2b
Author: Waylon S Walker <quadmx08@gmail.com>
Date:   Tue Mar 27 22:06:37 2018 -0500

    removed twitter logo

--- a/templates/layout/socials.pug
+++ b/templates/layout/socials.pug
@@ -6,9 +6,9 @@
 
 
   ul
-    li
-      a(href='https://twitter.com/cuttinscrap')
-        i.fa.fa-twitter(aria-hidden='true')
+    //- li
+    //-   a(href='https://twitter.com/cuttinscrap')
+    //-     i.fa.fa-twitter(aria-hidden='true')
         //- |  @cuttinscrap
     li
       a(href='https://www.instagram.com/cuttin.scrap/')
