--- a/templates/pages/blog/25/index.pug
+++ b/templates/pages/blog/25/index.pug
@@ -8,7 +8,7 @@ block append config
         config.card = "summary";
         config.disqus = true;
         config.blog = 25;
-        config.time = '2018-04-02';
+        config.time = 'April 2, 2018';
     -
 
     
