--- a/templates/layout/navigation.pug
+++ b/templates/layout/navigation.pug
@@ -1,8 +1,5 @@
 nav.init
-    #nav-btn
-        #ham ☰
-        #x X
-        include socials 
+    include socials 
     #site-navigation
         ul
             li 
@@ -11,6 +8,8 @@ nav.init
                 a(href="/project") Project
             li 
                 a(href="/blog") Blog
+            li 
+                a(href="/downloads") Downloads
             li 
                 a(href="/uses") Uses
             li 
