--- a/templates/layout/socials.pug
+++ b/templates/layout/socials.pug
@@ -6,6 +6,9 @@
 
 
   ul
+    li#nav-btn
+      #ham ☰
+      #x X
     //- li
     //-   a(href='https://twitter.com/cuttinscrap')
     //-     i.fa.fa-twitter(aria-hidden='true')
