--- a/templates/pages/index.pug
+++ b/templates/pages/index.pug
@@ -17,7 +17,7 @@ block append head
     script(src="/static/js/blog.js")
 
 block content
-    div#hero.card-clear
+    //- div#hero.card-clear
 
         //- img(src="/static/img/Projects/woodland-applique.jpg", alt="")
         //- include ../layout/about
